[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/Sylladex/CaptchaCard.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Sylladex/CaptchaCardHovered.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/CaptchaCard.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Hover"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -23.5, -30.5 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -23.5, -32.5 ) ]
}

[node name="CaptchaCard" type="Node2D"]
script = ExtResource( 4 )

[node name="CardButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -32.5
margin_right = 23.5
margin_bottom = 32.5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="ItemSprite" type="Sprite" parent="CardButton"]
position = Vector2( 21.5, 36.5 )
scale = Vector2( 0.4, 0.4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="mouse_entered" from="CardButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="CardButton" to="." method="_on_CardButton_pressed"]
